created folder structure to sperate back and front end, added favorite list table

--- a/styles/home.css
+++ b/styles/home.css
@@ -12,3 +12,12 @@ body{
     padding: 2%;
     border: 2px solid black;
 }
+
+.resultList{
+    width: 100%;
+}
+
+.resultList, th, td{
+    border: 1px solid;
+}
+
